<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/item_move_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/item_move_constraint_layout_padding_horizontal"
        style="@style/recyclerViewItem">

        <TextView
            android:id="@+id/move_name_metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_name_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>

        <View
            app:layout_constraintTop_toBottomOf="@id/move_name_metadata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Divider"/>

        <TextView
            android:id="@+id/move_power_metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_power"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/move_name_metadata"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>

        <View
            app:layout_constraintTop_toBottomOf="@id/move_power_metadata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Divider"/>

        <TextView
            android:id="@+id/move_type_metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/move_power_metadata"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>


        <TextView
            android:id="@+id/item_move_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_name_example"
            app:layout_constraintStart_toStartOf="@id/item_move_power"
            app:layout_constraintTop_toTopOf="@id/move_name_metadata"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>

        <TextView
            android:id="@+id/item_move_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_power_example"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/move_power_metadata"
            app:layout_constraintTop_toTopOf="@id/move_power_metadata"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>

        <TextView
            android:id="@+id/item_move_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_move_type_example"
            app:layout_constraintStart_toStartOf="@id/item_move_power"
            app:layout_constraintTop_toTopOf="@id/move_type_metadata"
            android:paddingVertical="@dimen/item_move_content_padding_vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>